k8s-manifests/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: diplom-app
  namespace: default
  labels:
    app: diplom-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: diplom-app
  template:
    metadata:
      labels:
        app: diplom-app
    spec:
      containers:
      - name: nginx
        image: cr.yandex/PLACEHOLDER_REGISTRY_ID/diplom-app:v1.0.0
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "100m"
---
apiVersion: v1
kind: Service
metadata:
  name: diplom-app-svc
  namespace: default
spec:
  selector:
    app: diplom-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
