k8s-manifests/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: diplom-app-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: app.diplom.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: diplom-app-svc
            port:
              number: 80
